Fixing alignment of nav menu on child theme 2 pages; forcing hidden status of secondary nav menu (shown in sidebar/hamburger)

--- a/assets/css/style-stopgap.css
+++ b/assets/css/style-stopgap.css
@@ -1006,10 +1006,10 @@ width: 100%;
 .menu-block-wrapper { display: block; }
 
 .apply-mobile-injected-menu > li:not(.menu-item-hide-on-large) { display: none; }
-.apply-mobile-injected-menu > li:not(.menu-item-hide-on-large) { display: block; }
+.apply-mobile-injected-menu > li:not(.menu-item-hide-on-large) { display: inline-block; }
 
 .menu-item-hide-on-large { display: block; }
-.menu-item-hide-on-large { display: none; }
+.menu-item-hide-on-large { display: none !important; }
 
 .menu-item-show-on-large { display: none; }
 .menu-item-show-on-large { display: block; }
